fixed body overflow

--- a/src/pages/dash/styles.scss
+++ b/src/pages/dash/styles.scss
@@ -15,7 +15,8 @@ a {
 .dashboard {
   padding: 2rem;
   max-width: 1200px;
-  margin: 56px auto;
+  margin: 0 auto;
   margin-bottom: 0;
+  padding-top: 5rem;
   color: $dark;
 }
