--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -26,7 +26,7 @@ body {
   &:before {
     position: absolute;
     width: 100vw;
-    height: 8rem;
+    height: 10rem;
     background-color: $light-purp;
     top: 0;
     right: 0;
